[package]
name = "site_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
encoding_rs = "0.8.33"
reqwest = {version = "0.11.25", features = ["json"] }
select = "0.6.0"
serde = {version = "1.0.197" }
serde_json = {version = "1.0.114" }
tokio = {version = "1.36.0", features = ["full"]}
